--- a/frontend/adventure_it/web/index.html
+++ b/frontend/adventure_it/web/index.html
@@ -22,6 +22,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="adventure_it">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8xsVljufOFTmpnVZI2KzobIdAvKjWdTE"></script>
 
   <title>adventure_it</title>
   <link rel="manifest" href="manifest.json">
